# queue-system-simulator

./: .gitignore  .pylintrc  README.md  pyproject.toml
.githooks/: pre-commit  prepare-commit-msg
src/queue_system_simulator/: main.py  queue_metrics.py  queueing_system.py  utils.py
tests/unit/: test_main.py  test_queueing_system.py
