[tool.poetry]
name="queue-system-simulator"
version="0.1.0"
packages = [{ include = "queue_system_simulator", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.0.0"
typer = "^0.12.5"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.6.4"
flake8 = "^7.0.0"
pylint = "^3.2.3"
pygments = "^2.15.1"
pipdeptree = "^2.10.2"
pytest = "^8.2.2"
pytest-json = "^0.4.0"
pytest-json-report = "^1.5.0"
pytest-mock = "^3.14.0"
mock = "^5.1.0"
callee = "^0.3.1"

